@@ -2761,7 +2761,7 @@ Not sure why it doesn't work in there.
       <xsl:copy-of select="xverb:numberLines($rtf)"/>
     </xsl:when>
     <xsl:when test="function-available('perl:numberLines')">
-      <xsl:copy-of select="perl:numberLines($rtf)"/>
+      <xsl:copy-of select="perl:numberLines($linenumbering.startinglinenumber, $rtf)"/>
     </xsl:when>
     <xsl:otherwise>
       <xsl:message terminate="yes">
